[gd_scene load_steps=5 format=3 uid="uid://uhfxrobvkbqg"]

[ext_resource type="Texture2D" uid="uid://ctfc6xgirrvl7" path="res://src/main/assets/textures/blood/blood_darkred.png" id="1_d7b0t"]
[ext_resource type="Script" path="res://src/main/scene/ui/health_bar/health_bar.gd" id="1_u2pj2"]
[ext_resource type="Texture2D" uid="uid://bwv71diva2538" path="res://src/main/assets/textures/blood/blood_over.png" id="2_cgl2e"]
[ext_resource type="Texture2D" uid="uid://iyk08nr5jtoa" path="res://src/main/assets/textures/blood/blood_red.png" id="3_g2ogw"]

[node name="HealthBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u2pj2")
metadata/_edit_vertical_guides_ = [448.0]
metadata/_edit_horizontal_guides_ = [38.0]

[node name="BottomTextureProgressBar" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(446, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -223.0
offset_top = -40.0
offset_right = 223.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.01
value = 1.0
texture_progress = ExtResource("1_d7b0t")

[node name="TopTextureProgressBar" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(446, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -223.0
offset_top = -40.0
offset_right = 223.0
grow_horizontal = 2
grow_vertical = 0
max_value = 1.0
step = 0.01
value = 1.0
texture_over = ExtResource("2_cgl2e")
texture_progress = ExtResource("3_g2ogw")
